--- a/app/src/main/res/xml/activity_motion_scene.xml
+++ b/app/src/main/res/xml/activity_motion_scene.xml
@@ -19,7 +19,20 @@
             android:layout_marginTop="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!--
+                CustomAttribute：自定义属性，支持任意自定义的属性，常见的有 TextView 的 textColor、background
+                 或者是 ImageView 的 src 、tint 等。当然还不止这些，我们平时自定义 View 中提供的自定义属性同样支持哦。
+
+                 attributeName：对应控件中拥有"set + 属性名字"的方法（内部通过反射获取方法名，然后使用反射调用），
+                                这种功能其实属性动画就有了。
+            -->
+            <CustomAttribute
+                app:attributeName="backgroundColor"
+                app:customColorValue="@color/colorFFFF5722" />
+
+        </Constraint>
 
         <Constraint
             android:id="@id/view2"
@@ -27,7 +40,14 @@
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <CustomAttribute
+                app:attributeName="backgroundColor"
+                app:customColorValue="@color/colorFFFF5722" />
+
+        </Constraint>
+
     </ConstraintSet>
 
     <!-- 结束动画 -->
@@ -40,7 +60,13 @@
             android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent">
+
+            <CustomAttribute
+                app:attributeName="backgroundColor"
+                app:customColorValue="@color/colorFF8BC34A" />
+
+        </Constraint>
 
         <Constraint
             android:id="@id/view2"
@@ -49,7 +75,14 @@
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent">
+
+            <CustomAttribute
+                app:attributeName="backgroundColor"
+                app:customColorValue="@color/colorFF8BC34A" />
+
+        </Constraint>
+
     </ConstraintSet>
 
 
