--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFFFFFFFF"
-    app:layoutDescription="@xml/activity_motion_scene"
-    app:showPaths="true">
+    tools:context=".component.activity.weight.ConstraintLayoutActivity">
 
-    <!--
-     app:motionDebug="SHOW_PATH"：可以看到运动轨迹，同showPaths功能相同。
-     showPaths：可以看到运动轨迹
-     layoutDescription：指向一个xml动画文件，必写的属性，不然会报错
-    -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view1"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-
-
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
