--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -4,5 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
+        强烈建议始终使用 FragmentContainerView 作为 fragment 的容器。
+    -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fcv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
