--- a/app/src/main/res/layout/activity_entrance.xml
+++ b/app/src/main/res/layout/activity_entrance.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clt"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorFF3F51B5"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
