--- a/app/src/main/res/layout/activity_fg_back_stack.xml
+++ b/app/src/main/res/layout/activity_fg_back_stack.xml
@@ -24,4 +24,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_reordering_allowed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorFFFF5722"
+        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:text="reorderingAllowed"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_action" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
