--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clt_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--
         强烈建议始终使用 FragmentContainerView 作为 fragment 的容器。
+        android:name 添加指定的fragment，需要目标fragment的完整类名。
+        android:tag 属性可以为fragment设置tag。
     -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv"
