--- a/app/src/main/res/layout/activity_fg_back_stack.xml
+++ b/app/src/main/res/layout/activity_fg_back_stack.xml
@@ -28,12 +28,24 @@
         android:id="@+id/tv_reordering_allowed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorFFFF5722"
         android:layout_marginLeft="10dp"
+        android:background="@color/colorFFFF5722"
         android:padding="5dp"
         android:text="reorderingAllowed"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_action" />
+
+    <TextView
+        android:id="@+id/tv_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:background="@color/colorFFFF5722"
+        android:padding="5dp"
+        android:text="remove"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_reordering_allowed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
