--- a/app/src/main/res/anim/fragment_enter_anim.xml
+++ b/app/src/main/res/anim/fragment_enter_anim.xml
@@ -22,4 +22,9 @@
         android:toXScale="1"
         android:toYScale="1" />
 
+    <translate
+        android:duration="3000"
+        android:fromXDelta="100%"
+        android:toXDelta="0%" />
+
 </set>
