--- a/app/src/main/res/anim/fragment_exit_anim.xml
+++ b/app/src/main/res/anim/fragment_exit_anim.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shareInterpolator="false"
-    android:zAdjustment="top">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <alpha
         android:duration="3000"
@@ -22,4 +20,10 @@
         android:pivotY="50%"
         android:toXScale="0.9"
         android:toYScale="0.9" />
+
+    <translate
+        android:duration="3000"
+        android:fromXDelta="0%"
+        android:toXDelta="100%" />
+
 </set>
