--- a/app/src/main/res/layout/activity_fg_back_stack.xml
+++ b/app/src/main/res/layout/activity_fg_back_stack.xml
@@ -48,7 +48,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_reordering_allowed" />
 
-
     <TextView
         android:id="@+id/tv_detach_and_attach"
         android:layout_width="wrap_content"
@@ -60,5 +59,18 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/tv_action"
         app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_animation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorFFFF5722"
+        android:padding="5dp"
+        android:text="animation"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/tv_action"
+        app:layout_constraintLeft_toRightOf="@id/tv_detach_and_attach" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
