--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="color00000000">#00000000</color>
     <color name="colorFFFFEB3B">#FFFFEB3B</color>
     <color name="colorFF8BC34A">#FF8BC34A</color>
+    <color name="colorFF009688">#FF009688</color>
+    <color name="colorFF9C27B0">#FF9C27B0</color>
 </resources>
