--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -79,6 +79,20 @@
             android:background="@color/colorFFFF5722"
             android:onClick="@{vm.onClickAdd}" />
 
+        <!--
+            双向数据绑定，其实就是在@后面加了"="
+        -->
+        <EditText
+            android:id="@+id/et"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/colorFFD81B60"
+            android:inputType="number"
+            android:maxLength="15"
+            android:maxLines="1"
+            android:text="@={vm.num}"
+            android:textSize="17sp" />
+
     </LinearLayout>
 
 
