--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="colorFF8BC34A">#FF8BC34A</color>
     <color name="colorFF009688">#FF009688</color>
     <color name="colorFF9C27B0">#FF9C27B0</color>
+    <color name="colorFFFF9800">#FFFF9800</color>
 </resources>
