--- a/app/src/main/res/layout/activity_scoped_storage.xml
+++ b/app/src/main/res/layout/activity_scoped_storage.xml
@@ -6,5 +6,27 @@
     android:layout_height="match_parent"
     android:background="@color/color804488FF">
 
+    <TextView
+        android:id="@+id/tv_media_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorFFFFFFFF"
+        android:padding="5dp"
+        android:text="SDK_Q公共目录媒体资源保存示例"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_download_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorFFFFFFFF"
+        android:padding="5dp"
+        android:text="SDK_Q公共目录Download保存示例"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_media_save" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
