--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
+         取消阴影：style="?android:attr/borderlessButtonStyle"
+    -->
+
     <Button
         android:id="@+id/button"
         android:layout_width="100dp"
