完善启动模式

--- a/app/src/main/res/layout/activity_coroutines.xml
+++ b/app/src/main/res/layout/activity_coroutines.xml
@@ -18,4 +18,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_coroutine_start_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="启动模式"
+        android:textColor="#FF4CAF50"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_coroutines" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
